--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 .item {
-    background-color: blue;
+    background-color: #89CFF0;
     padding: 15px;
     margin-bottom: 15px;
     border: transparent;
