--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -1,11 +1,11 @@
 body {
-    background-color: #fcf1e8;
+    background-color: #fafcd4;
     margin-top: 50px;
     font-family: 'Lato';
 }
 
 .item {
-    background-color: #89CFF0;
+    background-color: #d7eafa;
     padding: 15px;
     margin-bottom: 15px;
     border: transparent;
