--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -1,7 +1,7 @@
 body {
     background-color: #f9fcc0;
     margin-top: 50px;
-    font-family: 'Lato';
+    font-family: "Times New Roman", Times, serif;
 }
 
 .item {
