--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -42,7 +42,7 @@ button:focus {
 /* Position the image as a fixed element at the bottom */
 .bottom-image {
     position: fixed;
-    bottom: 0;
+    bottom: 10px;
     left: 50%; /* Center horizontally */
     transform: translateX(-50%); /* Center horizontally */
 }
