--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #f9fcc0;
+    background-color:#68FB76;
     margin-top: 50px;
     font-family: "Times New Roman", Times, serif;
 }
